# catalyst

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  CATALYST_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  catalyst.spec  tarpaulin.toml
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: catalyst-ci.yml  ci.yml  release.yml
catalyst-app/: Cargo.toml
catalyst-app/benches/: visual_line.rs
catalyst-app/src/: about.rs  app.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  config.rs  db.rs  debug.rs  doc.rs  editor.rs  editor_tab.rs  find.rs  focus_text.rs  global_search.rs  history.rs  inline_completion.rs  keymap.rs  keypress.rs  lib.rs  lsp.rs  main_split.rs  markdown.rs  palette.rs  plugin.rs  plugin_api.rs  proxy.rs  rename.rs  settings.rs  source_control.rs  status.rs  text_area.rs  text_input.rs  title.rs  update.rs  window_tab.rs
catalyst-app/src/app/: grammars.rs  logging.rs
catalyst-app/src/config/: color_theme.rs  terminal.rs
catalyst-app/src/editor/: diff.rs  gutter.rs  location.rs  view.rs
catalyst-app/src/file_explorer/: data.rs  node.rs  view.rs
catalyst-app/src/keypress/: condition.rs  keymap.rs  loader.rs
catalyst-app/src/palette/: item.rs
catalyst-app/src/panel/: call_hierarchy_view.rs  debug_view.rs  implementation_view.rs  plugin_view.rs  source_control_view.rs  terminal_view.rs
catalyst-app/src/plugin_api/: ai_assistant.rs  manager.rs  mcp_server.rs  mod.rs  sidebar.rs
catalyst-app/src/proxy/: remote.rs
catalyst-app/src/terminal/: data.rs  event.rs  panel.rs  raw.rs  tab.rs  view.rs
catalyst-core/: Cargo.toml
catalyst-core/src/: directory.rs  language.rs  lib.rs  style.rs
catalyst-core/src/syntax/: mod.rs
catalyst-proxy/: Cargo.toml
catalyst-proxy/src/: buffer.rs  cli.rs  dispatch.rs  lib.rs  terminal.rs
catalyst-proxy/src/plugin/: catalog.rs  dap.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
catalyst-proxy/src/plugin/wasi/: tests.rs
catalyst-rpc/: Cargo.toml
catalyst-rpc/src/: file.rs
defaults/: dark-theme.toml  icon-theme.toml  light-theme.toml  settings.toml
docs/: building-from-source.md  installing-with-package-manager.md
extra/: proxy.ps1  proxy.sh
extra/linux/: dev.catalyst.catalyst.desktop  dev.catalyst.catalyst.metainfo.xml
extra/linux/docker/alpine/: Dockerfile
extra/linux/docker/debian/: Dockerfile
extra/linux/docker/fedora/: Dockerfile
extra/linux/docker/ubuntu/: Dockerfile
extra/macos/Catalyst.app/Contents/: Info.plist
extra/windows/wix/: catalyst.wxs
lapce-app/: Cargo.toml
lapce-proxy/: Cargo.toml
lapce-rpc/: Cargo.toml
scripts/: performance_regression_check.py
tests/: basic_test.rs  mod.rs
tests/integration/: mod.rs
tests/mcp/: health_check.rs  mock_server.rs  mod.rs  protocol_compliance.rs
tests/performance/: file_search.rs  git_operations.rs  memory.rs  mod.rs  startup.rs  syntax_highlighting.rs
